rusty-cdk-macros/tests/fails/memory_too_high.rs
use rusty_cdk_macros::memory;

fn example() {
    let mem = memory!(20480);
}

fn main() {}